--- a/src/app/my-app/dynamic/drag-modal/drag-modal.component.html
+++ b/src/app/my-app/dynamic/drag-modal/drag-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog modal-c">
   <div class="modal-content">
     <div class="modal-header" style="background:none !important">
-     <button class="close" type="button" (click)="close()">
+     <button class="close" type="button" (click)="close($event)">
       <span aria-hidden="true">×</span>
     </button>
       <h4 class="modal-title">Modal</h4>
