--- a/src/app/my-app/dynamic/drag-modal/drag-modal.component.css
+++ b/src/app/my-app/dynamic/drag-modal/drag-modal.component.css
@@ -1,8 +1,6 @@
 .modal-c{
   position: absolute;
-  left: 50%;
-  top: -300px;
   width: auto;
   min-width: 600px;
-  transition: all 250ms ease-in-out;
+  margin: 0;
 }
